@@ -1,3 +1,7 @@
+drkns 27.06.2020 15:01:02 +0100 - build 5628
+
+1. Correction of 5628.
+
 drkns 26.06.2020 22:44:22 +0100 - build 5627
 
 1. Forum: A strange revert of the previous user filter selection after editing.
